blocks/photo-grid/photo-grid.css
.photo-grid {
  display: grid;
  grid-template-columns: repeat(4, minmax(284px, 352px));
  gap: 16px;
  max-width: 1184px;
  margin: 92px auto 0 auto;
}

@media screen and (max-width: 1200px) {
  .photo-grid {
    grid-template-columns: repeat(3, minmax(284px, 352px));
    gap: 14px;
    max-width: 928px;
  }
}

@media screen and (max-width: 1023px) {
  .photo-grid {
    grid-template-columns: repeat(2, 352px);
    gap: 16px;
    max-width: 720px;
    margin-top: 88px;
  }
}

@media screen and (max-width: 767px) {
  .photo-grid {
    grid-template-columns: repeat(1, 288px);
    gap: 12px;
    max-width: 288px;
    margin-top: 64px;
  }
}

